2023-03-30  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Percent of work done by finding changes

2023-03-24  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Warn if --today is specified and the time machine is offline

2023-03-20  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Number of backups today

2023-03-17  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: --today option

2023-02-16  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Some more filtering

2023-02-07  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh.completion: bash completion
        * tmstatus.sh: --quick option

2023-02-03  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Show log files

2023-01-30  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Refactoring: do not call the same tmutil command more than once

2022-08-31  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Available space in %

2022-08-18  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Parse LazyThinning

2022-08-17  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: corrected the backup size (current backup & total size)

2021-11-15  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Error message if Full Disk Access is required
        * tmstatus.sh: General cleanup with ShellCheck
        * tmstatus.sh(status): Fixed the processing of the remaining time

2021-10-26  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Fix the processing of tmutils listbackups and latestbackup

2021-04-20  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh: Verifying progress

2021-02-16  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh: Better phase naming
	* tmstatus.sh: Better info when performing backup verification

2018-02-20  Matteo Corti  <matteo@corti.li>

	* tmstatus.sh: Fixed the parsing of 100% completion and negative estimated duration

2018-02-11  Matteo Corti  <matteo@corti.li>
